<resources>
    <string name="app_name">Blacklist</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Willkommen Nutzer</string>
    <string name="find_events">Events finden</string>
    <string name="create_events">Events erstellen</string>
    <string name="title_activity_find_events">Find Events</string>
    <string name="title_activity_create_events">Create Events</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <!-- Array for types of Events for CreateEvents-->
    <string-array name="typeCreate_array">
        <item>Meet and Drink</item>
        <item>Movies</item>
    </string-array>

    <!-- Array for topics for FindEvents, type: Meet&Drink-->
    <string-array name="topics_array">
        <item>Kein Filter</item>
        <item>Fußball</item>
        <item>Politik</item>
        <item>Studium</item>
        <item>Krankheit</item>
        <item>Urlaub</item>
        <item>Kinder</item>
        <item>Beziehungen</item>
        <item>Probleme</item>
        <item>Weltuntergang</item>
        <item>Sonnenaufgänge</item>
    </string-array>

    <!-- Array for topics for FindEvents, type: Movies-->
    <string-array name="topicsMovie_array">
        <item>Kein Filter</item>
        <item>Action</item>
        <item>Romance</item>
        <item>Comedy</item>
        <item>Romcom</item>
        <item>Horror</item>
        <item>Splater</item>
        <item>Trash</item>
        <item>Mocumentary</item>
        <item>History</item>
        <item>Drama</item>
    </string-array>

    <!-- Array for topics for CreateEvents, type: Meet&Drink-->
    <string-array name="topicsCreateMD_array">
        <item>Choose Topic</item>
        <item>Fußball</item>
        <item>Politik</item>
        <item>Studium</item>
        <item>Krankheit</item>
        <item>Urlaub</item>
        <item>Kinder</item>
        <item>Beziehungen</item>
        <item>Probleme</item>
        <item>Weltuntergang</item>
        <item>Sonnenaufgänge</item>
    </string-array>

    <!-- Array for topics for CreateEvents, type: Movies-->
    <string-array name="topicsCreateMovie_array">
        <item>Choose Genre</item>
        <item>Action</item>
        <item>Romance</item>
        <item>Comedy</item>
        <item>Romcom</item>
        <item>Horror</item>
        <item>Splater</item>
        <item>Trash</item>
        <item>Mocumentary</item>
        <item>History</item>
        <item>Drama</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Strings related to user registration -->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="register_title">Register</string>
    <string name="login_title">Login</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="pwd">Password</string>
    <string name="btnRegister">Register</string>
    <string name="servicePort">141.76.66.73:8080</string>
    <string name="title_activity_create_event">CreateEventActivity</string>

    <!--Strings related to event registration -->
    <string name="registerEvent_title">Create Event</string>
    <string name="type">Type</string>
    <string name="topic">Topic1</string>
    <string name="timeStart">Beginns</string>
    <string name="timeEnd">Ends</string>
    <string name="location">Location</string>
    <string name="privacy">Privacy</string>
    <string name="btnRegisterEvent">Create</string>
    <string name="cancel">Cancel</string>
    <string name="btnSaveEvent">Save</string>
    <string name="delete_events">Event löschen</string>
    <string name="pick_time">Pick time</string>
    <string name="pick_date">Pick date</string>
    <string name="bookmarks_events">Bookmarked Events</string>
    <string name="title_activity_bookmarked_events">BookmarkedEventsActivity</string>
</resources>
