<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.silentdynamics.student.blacklist.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greeting"
        android:autoText="false"
        android:id="@+id/textWelcome" />

    <!--<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_events"
        android:id="@+id/findEventsButton"
        android:layout_below="@+id/textWelcome"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/createEventsButton"
        android:layout_marginTop="25dp"
        android:onClick="navigateToFindEventActivity" />-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_events"
        android:id="@+id/findEventsButton"
        android:layout_below="@+id/textWelcome"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="25dp"
        android:onClick="navigateToFindEventsActivity" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_events"
        android:id="@+id/createEventsButton"
        android:layout_below="@+id/textWelcome"
        android:layout_alignParentRight="true"
        android:layout_marginTop="25dp"
        android:onClick="navigatetoCreateEventActivity" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/findEventsButton"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

            <ListView
                 android:id="@android:id/list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true">
             </ListView>
    </RelativeLayout>
</RelativeLayout>
